Jython NEWS

Jython 2.5.1rc2
  Bugs Fixed
    - [ 1079 ] fixed regression on issue: twisted.python.threadable module: missing attribute '_RLock'
    - [ 1461 ] assert statement should lookup AssertionError using getglobal
    - [ 1425 ] distutils/util.py assumes too much posix

Jython 2.5.1rc1
  New Features
    - Upgraded to ANTLR 3.1.3
    - [ 1859477 ] Dynamically loaded ServletFilters like PyServlet
    - Built in JSR 223 scripting engine, with LiveTribe JSR 223 implementation for JDK 5
    - Jython "-J-classpath cp_args_here" now works as expected for unix shell.
  Bugs Fixed
    - [ 645615 ] cannot import through symbolic links
    - [ 1366 ] parsing of lamda expression fails
    - [ 1365 ] continuation lines fail in interactive interpreter
    - [ 1377 ] Event names shadowed by a field name on Java types leads to a NPE
    - [ 1381 ] Redundant declarations of interface implementation hides overriden methods
    - [ 1189 ] MD5 hash is incorrectly calculated when string contains non-latin chars and using python md5 lib
    - [ 1802339 ] Problem printing unicode when stdout intercepted
    - [ 1145 ] Jython 2.5 compatibility problem with JSR 223
    - [ 1400 ] Evaluating expression via JSR 223 ScriptEngine returns null instead of True/False
    - [ 1413 ] Array data type (PostgreSQL) is not supported (NPE)
    - [ 1434 ] Cannot get return code from a process started with os.popen with Jython 2.5 (worked in 2.2)
    - [ 1391 ] socket.getaddrinfo() breaks ftplib FTP client
    - [ 1409 ] JSR-233 engine version numbers backwards
    - [ 1408 ] JSR-223 engine doesn't implement I/O redirection
    - [ 1393 ] TypeError: _new_impl(): expected 1 args; got 0
    - [ 1415 ] ast Node creation fails with no arg constructors
    - [ 1405 ] Executing __run__.py from .jar throws exception(SystemExit: 0) in main when sys.exit(0) is called
    - [ 1439 ] Can't write() array.array
    - [ 1139 ] crashes on isinstance
    - [ 1430 ] Oracle JDBC Connection close